# gazebo-cms

./: .gitignore  Cargo.toml  README.md  TODO.md  mock_db.csv  mock_db_posts.csv  mock_db_users.csv
_html-templates/: gb-admin.css  gb-admin.html  gb-login.html  gb-style.css
_postman-collection/: Gazebo-CMS-Rest-Routes.postman_collection.json
gazebo-core-common/: Cargo.toml
gazebo-gui/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html
gazebo-gui/dev/js/: script.js
gazebo-gui/dev/scss/: _footer.scss  _functions.scss  _variables.scss  admin.scss  core.scss  footer.scss  login.scss
gazebo-gui/src/: app.rs  consts.rs  context.rs  main.rs
gazebo-gui/src/api/: account.rs  mod.rs  post.rs  user.rs
gazebo-gui/src/components/: accounts_table.rs  admin_bar.rs  admin_menu.rs  button.rs  button_add_new_entry.rs  entries_table_posts.rs  entry_editor.rs  footer.rs  header.rs  input.rs  login_form.rs  lost_password.rs  main_navigation.rs  mod.rs  nav.rs  post_rollup.rs  table_entries.rs  textarea.rs
gazebo-gui/src/components/admin/: admin_menu.rs  button_add_new_entry.rs  entries_table_posts.rs  mod.rs  profile_editor.rs  widget_logged_in_users.rs
gazebo-gui/src/pages/: admin.rs  admin_posts.rs  edit_entry.rs  edit_entry_existing.rs  edit_entry_new.rs  entry.rs  gazebo_admin_area.rs  home.rs  login.rs  logout.rs  mod.rs  not_found.rs
gazebo-gui/src/pages/admin/: admin_accounts.rs  admin_dashboard.rs  admin_media.rs  admin_posts.rs  admin_profile.rs  admin_settings.rs  admin_users.rs  edit_entry.rs  edit_entry_new.rs  mod.rs
migrations/: 20230514132545_create_gb_posts_table.down.sql  20230514132545_create_gb_posts_table.up.sql  20230514133656_create_gb_posts_add_default_posts.down.sql  20230514133656_create_gb_posts_add_default_posts.up.sql  20230514145209_create_gb_accounts_table.down.sql  20230514145209_create_gb_accounts_table.up.sql  20230514145635_create_gb_accounts_add_default_users.down.sql  20230514145635_create_gb_accounts_add_default_users.up.sql  20230531202528_create_gb_account_meta_table.down.sql  20230531202528_create_gb_account_meta_table.up.sql  (+6 more)
src/: _trash.rs  allocator.rs  (+14 more)
(+82 files in other folders)
