[package]
name = "gazebo-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
chrono = "0.4.23"
urlencoding = "2.1.2"
regex = "1.7.3"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "migrate", "postgres"] }