[package]
name = "gazebo-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
urlencoding = "2.1.2"
regex = "1.7.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "migrate", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.105"
jsonwebtoken = "8"

# Gazebo crates
gazebo-core-common = { version = "0.1.0", path = "gazebo-core-common" }

[workspace]
members = [
    "gazebo-core-common",
    "gazebo-gui"
]